kustomize/base/mongo-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express # Unique identifier for the Deployment
  namespace: default # Namespace where the Deployment is located
  labels:
    app: mongo-express # Label to identify resources related to this Deployment
spec:
  replicas: 1 # Number of replica pods to maintain
  selector:
    matchLabels:
      app: mongo-express # Selector label for the pods
  template:
    metadata:
      labels:
        app: mongo-express # Label for pods created by this Deployment
    spec:
      containers:
        - name: mongo-express # Name of the container
          image: mongo-express # Container image to use
          ports:
            - containerPort: 8081 # Port to expose on the container
