kustomize/base/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment # Unique identifier for the Deployment
  namespace: default # Namespace in which the Deployment is created
  labels:
    app: mongodb # Label to identify resources related to this Deployment
spec:
  replicas: 1 # Number of replica pods to maintain
  selector:
    matchLabels:
      app: mongodb # Selector label for the pods
  template:
    metadata:
      labels:
        app: mongodb # Label for pods created by this Deployment
    spec:
      containers:
        - name: mongodb # Name of the container
          image: mongo # Container image to use
          ports:
            - containerPort: 27017 # Port to expose on the container
