kustomize/base/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service # Unique identifier for the Service
spec:
  selector:
    app: mongo-express # Selector for pods associated with this Service
  type: LoadBalancer # Type of the Service (LoadBalancer, ClusterIP, NodePort, etc.)
  ports:
    - protocol: TCP # Protocol used for the Service
      port: 8081 # Port on the Service
      targetPort: 8081 # Port on the pods targeted by the Service
      nodePort: 30000 # NodePort used if Service type is LoadBalancer
