kustomize/base/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # Unique identifier for the Service
spec:
  selector:
    app: mongodb # Label selector to route traffic to Pods with this label
  ports:
    - protocol: TCP
      port: 27017 # Port on the Service
      targetPort: 27017 # Port on the Pods
