kustomize/base/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name # Unique identifier for the Ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # Ingress class annotation
spec:
  rules:
    - host: devops.com # Hostname associated with the Ingress
      http:
        paths:
          - path: / # Path to match in the Ingress
            backend:
              serviceName: my-service # Service to route traffic to
              servicePort: 8080 # Service port to use
